# bazel-xlint-repro

./: .gitignore  BUILD.bazel  Demo.java  DeprecatedLib.java  DeprecatedLibFailTest.java  DeprecatedLibTest.java  MODULE.bazel  README.md  WORKSPACE.bazel
